--- a/diary-gym/src/app/features/pages/home/home.component.html
+++ b/diary-gym/src/app/features/pages/home/home.component.html
@@ -11,6 +11,9 @@
     (newRepEvent)="newRep($event)"
   />
     <app-new-item-button (newExerciseEvent)="addExercise($event)" />
+    <br>
+    <br>
+    <app-new-item-button (newExerciseEvent)=" addExerciseFormREactive($event)" />
     <br />
     <br />
     <button
