--- a/diary-gym/src/app/features/pages/home/home.component.html
+++ b/diary-gym/src/app/features/pages/home/home.component.html
@@ -1,27 +1,21 @@
-<div class="min-h-screen bg-gray-200">
-  <header class="bg-blue-500 py-4 text-white">
-    <div class="mx-auto max-w-6xl px-4">
-      <h1 class="text-2xl font-bold">Workout diary</h1>
-    </div>
-  </header>
-  <main class="mx-auto mt-8 max-w-6xl px-4">
-    <app-list-entries
-    [exerciseList]="exerciseList"
-    (deleteEvent)="deleteItem($event)"
-    (newRepEvent)="newRep($event)"
-  />
-    <app-new-item-button (newExerciseEvent)="addExercise($event)" />
-    <br>
-    <br>
-    <app-new-item-button (newExerciseEvent)=" addExerciseFormREactive($event)" />
-    <br />
-    <br />
-    <button
-      class="rounded bg-blue-500 py-2 px-4 font-bold text-white hover:bg-blue-700"
-      (click)="newList()"
-    >
-      Server Sync
-    </button>
+<div class="flex h-screen">
+  <aside class="w-1/6 bg-blue-500 text-white">
+    <nav class="mt-8">
+      <ul class="flex flex-col items-center space-y-4">
+        <li>
+          <a routerLink="./diary" class="flex items-center space-x-2 text-white">
+            <span>Diary</span>
+          </a>
+         </li>
+         <li>
+          <a routerLink="./diary/new-reactive" class="flex items-center space-x-2 text-white">
+            <span>New Entry</span>
+          </a>
+         </li>
+      </ul>
+    </nav>
+  </aside>
+  <main class="flex-1 bg-gray-200 p-4">
+    <router-outlet></router-outlet>
   </main>
-
 </div>
