--- a/diary-gym/src/app/features/components/list-entries/list-entries.component.html
+++ b/diary-gym/src/app/features/components/list-entries/list-entries.component.html
@@ -6,6 +6,7 @@
         [exercise-set]="item"
         (deleteEvent)="deleteEvent.emit($event)"
         (newRepEvent)="newRepEvent.emit($event)"
+        (editEvent)="editEvent.emit($event)"
       />
     </li>
 
