--- a/diary-gym/src/app/features/pages/diary/components/diary.component.html
+++ b/diary-gym/src/app/features/pages/diary/components/diary.component.html
@@ -9,6 +9,7 @@
     [exerciseList]="exerciseList"
     (deleteEvent)="deleteItem($event)"
     (newRepEvent)="newRep($event)"
+    (editEvent)="editEntry($event)"
   />
     <app-new-item-button (newExerciseEvent)="addExercise($event)" />
     <br>
