--- a/diary-gym/src/app/features/components/entry-item/entry-item.component.html
+++ b/diary-gym/src/app/features/components/entry-item/entry-item.component.html
@@ -12,6 +12,14 @@
     >
       Eliminar
     </button>
+
+    <button
+      class="rounded bg-blue-500 px-4 py-2 font-bold text-white hover:bg-blue-700"
+      (click)="editEntry()"
+    >
+      Edit
+    </button>
+
     <button
       class="rounded bg-blue-500 py-2 px-4 font-bold text-white hover:bg-blue-700"
       (click)="newRep()"
