--- a/diary-gym/src/app/features/components/new-entry-form-reactive/new-entry-form-reactive.component.html
+++ b/diary-gym/src/app/features/components/new-entry-form-reactive/new-entry-form-reactive.component.html
@@ -95,12 +95,15 @@
     </div>
 
     <div class="flex items-center justify-center">
-      <button type="submit"
-              [disabled]="entryForm.invalid"
-              [class.opacity-50]="entryForm.invalid"
-              class="bg-blue-500 text-white font-bold py-2 px-4 rounded hover:bg-blue-700">
+      <button
+        type="submit"
+        [disabled]="entryForm.invalid"
+        [class.opacity-50]="entryForm.invalid"
+        class="rounded bg-blue-500 px-4 py-2 font-bold text-white hover:bg-blue-700"
+      >
         Add Entry
       </button>
+
     </div>
 
     {{ entryForm.value | json }}
