--- a/diary-gym/src/app/features/pages/home/home.component.html
+++ b/diary-gym/src/app/features/pages/home/home.component.html
@@ -8,7 +8,7 @@
           </a>
          </li>
          <li>
-          <a routerLink="./diary/new-reactive" class="flex items-center space-x-2 text-white">
+          <a routerLink="./diary/entry" class="flex items-center space-x-2 text-white">
             <span>New Entry</span>
           </a>
          </li>
