--- a/diary-gym/src/app/features/components/entry-item/entry-item.component.html
+++ b/diary-gym/src/app/features/components/entry-item/entry-item.component.html
@@ -14,7 +14,7 @@
     </button>
 
     <button
-      class="rounded bg-blue-500 px-4 py-2 font-bold text-white hover:bg-blue-700"
+      class="mr-2 rounded bg-blue-500 px-4 py-2 font-bold text-white hover:bg-blue-700"
       (click)="editEntry()"
     >
       Edit
