--- a/diary-gym/src/app/features/pages/home/home.component.html
+++ b/diary-gym/src/app/features/pages/home/home.component.html
@@ -12,6 +12,12 @@
             <span>New Entry</span>
           </a>
          </li>
+         <li>
+          <a (click)="logout()" class="flex items-center space-x-2 text-white">
+            <span>Logout</span>
+          </a>
+         </li>
+
       </ul>
     </nav>
   </aside>
