--- a/diary-gym/src/app/features/components/new-entry-form-reactive/new-entry-form-reactive.component.html
+++ b/diary-gym/src/app/features/components/new-entry-form-reactive/new-entry-form-reactive.component.html
@@ -13,6 +13,7 @@
         name="date"
         formControlName="date"
         class="w-full p-2 border border-gray-300 rounded"
+        [min]="minDate"
       />
     </div>
     <div
@@ -30,7 +31,20 @@
         name="exercise"
         formControlName="exercise"
         class="w-full p-2 border border-gray-300 rounded"
+        (focus)="toggleSuggestions(true)"
       />
+      <ul
+        class="absolute z-10 mt-2 w-auto rounded border border-gray-300 bg-white"
+        *ngIf="showSuggestions"
+    >
+      <li
+        *ngFor="let suggestion of exercises$ | async"
+        class="cursor-pointer px-3 py-2 hover:bg-blue-500 hover:text-white"
+        (click)="selectExercise(suggestion.description)"
+      >
+        {{ suggestion.description }}
+      </li>
+    </ul>
     </div>
     <div
         *ngIf="
