--- a/diary-gym/src/app/features/components/new-entry-form-reactive/new-entry-form-reactive.component.html
+++ b/diary-gym/src/app/features/components/new-entry-form-reactive/new-entry-form-reactive.component.html
@@ -114,6 +114,7 @@
         [disabled]="entryForm.invalid"
         [class.opacity-50]="entryForm.invalid"
         class="rounded bg-blue-500 px-4 py-2 font-bold text-white hover:bg-blue-700"
+        data-cy="submit"
       >
         Add Entry
       </button>
